.provarCaches/00D410000011HE0EAM/objects/rstk__pomatch__c.object
<CustomObject>
    <description>pomatch__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pomatch_vendor__c &amp;&apos;-&apos; &amp; rstk__pomatch_invnumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_addl__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>There are two types of details that exist on an Invoice; those that reference a PO Receipt and those that are Additional Lines on the invoice (i.e. Tax &amp; Freight).  This field is to be set to TRUE for upload records that do not reference a PO Line.</inlineHelpText>
        <label>Additional Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_amount__c</fullName>
        <inlineHelpText>This field carries the Line Amount value which will be used on Additional Entry transactions (when the indicator is True).  The field is required for Additional Entry lines.</inlineHelpText>
        <label>Additional Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_bankchargeamt__c</fullName>
        <inlineHelpText>This field carries the amount of the Payment Related Bank Charge.  It is not included in the Vendor Invoice amount but is added to the AP invoice.  The field is optional and must be the same for all records referencing a common Vendor and Invoice Number.</inlineHelpText>
        <label>Buyer Paid Payment Bank Charge Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_closebatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field allows the user to specify that that the PO-AP Match Batch created by associated transaction object processing is to be closed (transferred to AP).  Value must be the same for all records referencing a common Vendor and Invoice Number.</inlineHelpText>
        <label>Close the PO-AP Match Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_cmpno__c</fullName>
        <inlineHelpText>This field carries the text value of the Rootstock Company in which the upload is to be processed.  The field is required and must be the same for all records referencing a common Vendor and Invoice Number.</inlineHelpText>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_desc__c</fullName>
        <inlineHelpText>This field carries the Invoice Line Description which will be used on Additional Entry transactions (when the indicator is True).   The field is optional.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_dim1__c</fullName>
        <inlineHelpText>This field carries the value for Dimension 1 which will be used on Additional Entry transactions (applicable only when the indicator is True).    The field optional and when specified, must be a valid system Dimension 1 Value .</inlineHelpText>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_dim2__c</fullName>
        <inlineHelpText>This field carries the value for Dimension 2 which will be used on Additional Entry transactions (applicable only when the indicator is True).    The field optional and when specified, must be a valid system Dimension 2 Value .</inlineHelpText>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_dim3__c</fullName>
        <inlineHelpText>This field carries the value for Dimension 3 which will be used on Additional Entry transactions (applicable only when the indicator is True).    The field optional and when specified, must be a valid system Dimension 3 Value .</inlineHelpText>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_div__c</fullName>
        <inlineHelpText>This field carries the text value of the Division in which the upload is to be processed. The field is required, the Division must be in the specified Company,  and the value must be the same for all records referencing a common Vendor and Invoice Number.</inlineHelpText>
        <label>Division Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_error__c</fullName>
        <inlineHelpText>When an upload record fails validation checking, details on the offending field are placed here.</inlineHelpText>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_invdate__c</fullName>
        <inlineHelpText>This field carries the Date of the Vendor’s  Invoice.  The field is required and must be the same for all records referencing a common Vendor and Invoice Number.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_invnumber__c</fullName>
        <inlineHelpText>This field carries the Vendor’s  Invoice Number for the transaction to be processed.  The field is required on all upload records and combined with the Vendor Number constitutes the Invoice Set to which multiple records can belong.</inlineHelpText>
        <label>Invoice Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_invtotamt__c</fullName>
        <inlineHelpText>This field carries the total Amount of the Vendor’s  Invoice.  The field is required and must be the same for all records referencing a common Vendor and Invoice Number.</inlineHelpText>
        <label>Invoice Amount (Total)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_invvaliderror__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a system field that indicates that another upload record for this same Vendor and Invoice Number failed a required validation, causing all records for the same Vendor and Invoice Number to be rejected.  (Details on the offending record)</inlineHelpText>
        <label>Validation Error – Another Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_lno__c</fullName>
        <inlineHelpText>This field carries the Purchase Order Line for the transaction to be processed.  It is required {only} when the Additional Entry indicator is False and must exist on the specified Purchase Order.</inlineHelpText>
        <label>PO Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_mfgacct__c</fullName>
        <inlineHelpText>This field carries the Sub-Ledger Account Number which will be used on Additional Entry transactions (when the indicator is True).  The field is required for Additional Entries and must be a Sub-Ledger Account value in the Purchasing Division.</inlineHelpText>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_ordno__c</fullName>
        <inlineHelpText>This field carries the PO Number for the transaction to be processed.  It is required {only} when the Additional Entry indicator is False and must be associated with the Vendor when specified.  At least one row on an Invoice set must reference a PO.</inlineHelpText>
        <label>PO Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_price__c</fullName>
        <inlineHelpText>This field carries the Price on the Vendor Invoice for the PO Line transaction to be processed.  It is required {only} when the Additional Entry indicator is False and will be compared to the PO Line Price to determine variances.</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_processok__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a system field that indicates the upload record has passed validations was successfully moved to the next step (creation of the Transaction Processing records).</inlineHelpText>
        <label>Validations OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_qty__c</fullName>
        <inlineHelpText>This field carries the Quantity on the Vendor Invoice for the PO Line transaction to be processed.  It is required {only} when the Additional Entry indicator is False and will be compared to the Receipt Quantity to determine variances.</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_sydatad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When a PO Match upload passes all required validations, it is moved to the next step which is the creation of the Transaction Processing record.  This field provides a link to the Transaction Record (SYDATAD) created for this row.</inlineHelpText>
        <label>Link to Transaction Processing Record</label>
        <referenceTo>rstk__sydatad__c</referenceTo>
        <relationshipLabel>AP-PO Match Uploads</relationshipLabel>
        <relationshipName>pomatchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_validerror__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a system field that indicates the upload failed a required validation and was not moved to the next step (creation of the Transaction Processing records).  See the Error Description field for details.</inlineHelpText>
        <label>Validation Error – This Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__pomatch_vendor__c</fullName>
        <inlineHelpText>This field carries the Vendor Number for which the transaction is to be processed.  The field is required on all upload records and combined with the Invoice Number constitutes the Invoice Set to which multiple records can belong.</inlineHelpText>
        <label>Vendor Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AP-PO Match Upload</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AP-PO Match Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>